[project]
name = "defi-yield-scout"
version = "1.0.0"
description = "DeFi yield farming intelligence agent powered by CROO CAP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "croo-sdk>=0.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
